Fixed overflow settings

--- a/public/stylesheets/deck-editor.less
+++ b/public/stylesheets/deck-editor.less
@@ -147,6 +147,7 @@
   font-size   : 1.3em;
   box-sizing  : border-box; 
   word-wrap   : break-word;
+  overflow    : auto;
   -webkit-hyphens : auto;
   -moz-hyphens    : auto;
   hyphens         : auto;
